<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Amazon IVS Broadcast</string>
    <string name="splash_title">Amazon IVS Broadcast Demo</string>
    <string name="splash_subtitle">This demo application broadcasts your Android\'s camera or screen to an Amazon IVS Channel.</string>
    <string name="get_started">Get Started</string>
    <string name="err_failed_to_load_web">Failed to load web page</string>
    <string name="permissions_privacy_note">This application does not store any data captured from your phone. <u>AWS Privacy Policy</u></string>
    <string name="permissions_title">To continue, provide the following permissions</string>
    <string name="camera_title">Camera Access</string>
    <string name="continue_text">Continue</string>
    <string name="permissions_camera_subtitle">Lets the demo capture video using the camera</string>
    <string name="camera_subtitle">Lets the demo capture audio using the camera</string>
    <string name="microphone_title">Microphone Access</string>
    <string name="configuration_title">Auto-configuration</string>
    <string name="configuration_description">Auto-configuration chooses the best video settings for your current internet connection. <b>You can always run this test again from the app settings</b>.</string>
    <string name="run_auto_configuration">Run auto-configuration</string>
    <string name="run_auto_configuration_short">Run auto-config</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="camera_off">Camera off</string>
    <string name="camera_on">Camera on</string>
    <string name="flip">Flip</string>
    <string name="go_live">Go live</string>
    <string name="share_screen">Share screen</string>
    <string name="settings">Settings</string>
    <string name="offline">Offline</string>
    <string name="description_banner">Banner</string>
    <string name="description_mute">Mute button</string>
    <string name="description_camera_toggle">Camera toggle button</string>
    <string name="description_flip_button">Flip button</string>
    <string name="description_go_live_button">Go live button</string>
    <string name="invite_to_watch">Invite to watch</string>
    <string name="testing_network">Testing network…</string>
    <string name="cancel_configuration">Cancel auto-configuration</string>
    <string name="configuration_summary">Configuration Summary</string>
    <string name="configuration_summary_subtitle">These are recommended encoder settings based on current network conditions. You can edit these values manually in the <b>App settings.</b></string>
    <string name="video_quality">Video quality</string>
    <string name="bitrate">Bitrate</string>
    <string name="estimated_data_usage">Estimated data usage</string>
    <string name="data_usage_note">*Actual data usage may be higher or lower, depending on network conditions during the livestream.</string>
    <string name="data_usage_properties_note">Actual data usage may be higher or lower, depending on network conditions during the livestream.</string>
    <string name="link_amazon_channel">Create an Amazon IVS Channel.</string>
    <string name="ingest_server">Ingest server</string>
    <string name="create_channel_note">Create an Amazon IVS channel to get an ingest server and stream key. Create an Amazon IVS Channel.</string>
    <string name="not_set">Not set</string>
    <string name="continue_to_app">Continue to App</string>
    <string name="rerun_auto_configuration">Rerun auto-configuration</string>
    <string name="stream_key">Stream key</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="custom_resolution_input_note">Type a pixel resolution in <b>width x height</b> format. Cannot exceed 1920 x 1920 pixels.</string>
    <string name="concealed_stream_key">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="network_issue">Network issue</string>
    <string name="long_test_message">The test is taking longer than usual.</string>
    <string name="error">Error</string>
    <string name="connection_error">Could not complete network test. Check your internet connection and try again.</string>
    <string name="endpoint_url_base">rtmps://</string>
    <string name="quality_template">%1$dp%2$d</string>
    <string name="kbps_template">%1$s Kbps</string>
    <string name="bitrate_template_auto">Auto - %1$s Kbps</string>
    <string name="gb_per_h_template">%1$sGB/hr</string>
    <string name="retry">Retry</string>
    <string name="settings_auto_config_description">Automatically configure resolution, framerate and bitrate based on current network conditions.</string>
    <string name="resolution_and_framerate">Resolution and framerate</string>
    <string name="orientation">Orientation</string>
    <string name="stream_settings_note">Bitrate, resolution, and framerate impact the quality of your video stream. Note that higher resolutions and framerates will require higher bitrates to avoid compression artifacts. The app will automatically adjust your bitrate based on network conditions.</string>
    <string name="settings_credentials_note">Create an Amazon IVS channel to get an ingest server and stream key. These values must be set before you can start streaming. Create an Amazon IVS Channel.</string>
    <string name="settings_developer_mode_subtitle">Show video and network stats.</string>
    <string name="developer_mode">Developer mode</string>
    <string name="use_custom_resolution">Use custom resolution</string>
    <string name="highest_quality">1080p</string>
    <string name="middle_quality">720p</string>
    <string name="lowest_quality">480p</string>
    <string name="resolution_description">The source resolution of your video stream. This cannot be changed during a stream.</string>
    <string name="use_custom_framerate">Use custom framerate</string>
    <string name="framerate_description">The source framerate of your video stream. This cannot be changed during a stream.</string>
    <string name="_60fps">60fps</string>
    <string name="_30fps">30fps</string>
    <string name="_15fps">15fps</string>
    <string name="orientation_description">Auto-orientation starts a stream in portrait or landscape mode depending on your device orientation. This setting cannot be changed during a stream.</string>
    <string name="custom_framerate">Custom framerate</string>
    <string name="custom_resolution">Custom resolution</string>
    <string name="custom_resolution_hint">width x height</string>
    <string name="custom_framerate_input_note">Type the number of frames per second (fps). Must be a whole number between 10 and 60.</string>
    <string name="custom_framerate_hint">Framerate</string>
    <string name="auto">Auto</string>
    <string name="auto_adjust_bitrate">Auto-adjust bitrate</string>
    <string name="auto_adjust_bitrate_description">Automatically adjust the bitrate during a video stream. Turn on <b>manually set bitrate limits</b> to set the min and max bitrate.</string>
    <string name="target_bitrate">Target bitrate</string>
    <string name="manually_set_bitrate_limits">Manually set bitrate limits</string>
    <string name="minimum_bitrate">Minimum bitrate</string>
    <string name="maximum_bitrate">Maximum bitrate</string>
    <string name="target_bitrate_description">The target bitrate (or initial bitrate) of the stream in Kbps. Must be a number between 1 and 8500.</string>
    <string name="maximum_bitrate_description_template">The maximum bitrate of the stream in Kbps. Must be a number between your target bitrate (%1$s) and 8500.</string>
    <string name="minimum_bitrate_description_template">The minimum bitrate of the stream in Kbps. Must be a number between 1 and your target bitrate (%1$s).</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="orientation_dialog_description">Auto-orientation starts a stream in portrait or landscape mode depending on your device orientation.</string>
    <string name="stream_key_input_note">Keep your stream key secret. Anyone who has it can stream to your Amazon IVS channel.</string>
    <string name="fps_template">%1$dfps</string>
    <string name="stream_time_mm_ss">%1$s:%2$s</string>
    <string name="stream_time_hh_mm_ss">%1$s:%2$s:%3$s</string>
    <string name="end_stream">End stream</string>
    <string name="description_back_button">Back button</string>
    <string name="show_debug_info">Show debug info</string>
    <string name="camera_off_mask_text">Camera OFF</string>
    <string name="cpu">CPU</string>
    <string name="copy">Copy</string>
    <string name="hide_debug_info">Hide debug info</string>
    <string name="mem">MEM</string>
    <string name="video_config">VideoConfig</string>
    <string name="temp">TEMP</string>
    <string name="initial_bitrate">initialBitrate</string>
    <string name="maxbitrate">maxBitrate</string>
    <string name="minbitrate">minBitrate</string>
    <string name="targetframerate">targetFrameRate</string>
    <string name="keyframeinterval">keyframeInterval</string>
    <string name="useautobitrate">useAutoBitrate</string>
    <string name="codec">codec</string>
    <string name="use_bframes">useBframes</string>
    <string name="size_template">%1$sx%2$s</string>
    <string name="avc">AVC</string>
    <string name="size">size</string>
    <string name="used_memory_template">%1$sMB</string>
    <string name="network_megabytes_template">%1$s MB</string>
    <string name="network_gigabytes_template">%1$s GB</string>
    <string name="cpu_temp_template">%1$s&#xb0;C</string>
    <string name="connecting">Connecting</string>
    <string name="resolution_template">%1$d x %2$d</string>
    <string name="framerate_template">%1$dfps</string>
    <string name="custom_resolution_template">Custom - %1$dx%2$d</string>
    <string name="timed_metadata">Timed metadata</string>
    <string name="sample_event_data">{ name: "test event" }</string>
    <string name="sample_event">Sample event</string>
    <string name="send">Send</string>
    <string name="success">success</string>
    <string name="sample_event_was_sent">Sample event was sent</string>
    <string name="must_be_streaming_to_send_event">Sample event could not be sent. You must be streaming to send an event.</string>
    <string name="screen_sharing_active">Screen sharing active</string>
    <string name="screensharing_camera_note">The camera is disabled while you are sharing your screen. Stop sharing to enable it again.</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="alert">alert</string>
    <string name="offline_screen_sharing_alert">You are sharing your screen, but your live stream is offline. To share your screen with your viewers, you must Go live.</string>
    <string name="not_available_short">N/A</string>
    <string name="incomplete_stream_credentials_message">You must set an ingest server and stream key to run the auto-config</string>
    <string name="default_camera">Default camera</string>
    <string name="camera_option_template">%1$s %2$s (%3$s)</string>
    <string name="wrong_resolution_input">Type a pixel resolution in width x height format. Cannot exceed 1920 x 1080 pixels.</string>
    <string name="wrong_framerate_input">The framerate of the stream in fps. Must be a number between 10 and 60.</string>
    <string name="playback_url">Playback URL</string>
    <string name="playback_url_hint">https://</string>
    <string name="playback_url_template">https://www.ivs.rocks/live#%1$s</string>
    <string name="error_fatal">Broadcast failed</string>
    <string name="error_device_disconnected">Device disconnected</string>
</resources>