<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isStreamOnline"
            type="Boolean" />

        <variable
            name="isStreamMuted"
            type="Boolean" />

        <variable
            name="isCameraOff"
            type="Boolean" />

        <variable
            name="isScreenCaptureOn"
            type="Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/broadcast_padding_huge"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/show_debug_info"
            style="@style/MainActionButtonWeak"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/broadcast_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/broadcast_margin_normal"
            android:background="@drawable/bg_button_weak_light"
            android:paddingStart="@dimen/broadcast_padding_normal"
            android:paddingEnd="@dimen/broadcast_padding_normal"
            android:text="@string/show_debug_info"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_broadcast_bottom_sheet"
            android:clickable="true"
            android:paddingBottom="@dimen/broadcast_padding_big"
            android:focusable="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/grab_item"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/broadcast_bottom_sheet_drag_handle_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/broadcast_mute"
                android:layout_width="@dimen/broadcast_controls_button_diameter"
                android:layout_height="@dimen/broadcast_controls_button_diameter"
                android:layout_marginTop="@dimen/broadcast_margin_normal"
                android:background="@{isStreamMuted ? @drawable/bg_broadcast_circle_button_red : @drawable/bg_broadcast_circle_button }"
                android:contentDescription="@string/description_mute"
                android:elevation="5dp"
                android:padding="@dimen/broadcast_padding_small"
                android:src="@drawable/ic_muted"
                app:layout_constraintStart_toStartOf="@id/share_screen"
                app:layout_constraintTop_toBottomOf="@id/grab_item"
                app:tint="@color/broadcast_white_color"
                tools:src="@drawable/ic_muted" />

            <TextView
                android:id="@+id/broadcast_mute_text"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/broadcast_margin_tiny"
                android:text="@{isStreamMuted ? @string/unmute : @string/mute}"
                app:layout_constraintEnd_toEndOf="@id/broadcast_mute"
                app:layout_constraintStart_toStartOf="@id/broadcast_mute"
                app:layout_constraintTop_toBottomOf="@id/broadcast_mute" />

            <ImageView
                android:id="@+id/broadcast_camera"
                android:layout_width="@dimen/broadcast_controls_button_diameter"
                android:layout_height="@dimen/broadcast_controls_button_diameter"
                android:background="@{isCameraOff ? @drawable/bg_broadcast_circle_button_red : @drawable/bg_broadcast_circle_button }"
                android:contentDescription="@string/description_camera_toggle"
                android:elevation="5dp"
                android:padding="@dimen/broadcast_padding_small"
                android:src="@drawable/ic_camera_off"
                app:layout_constraintEnd_toStartOf="@id/broadcast_flip"
                app:layout_constraintStart_toEndOf="@id/broadcast_mute"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute"
                app:tint="@color/broadcast_white_color" />

            <TextView
                android:id="@+id/broadcast_camera_text"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{isCameraOff ?  @string/camera_on : @string/camera_off}"
                app:layout_constraintBottom_toBottomOf="@id/broadcast_mute_text"
                app:layout_constraintEnd_toEndOf="@id/broadcast_camera"
                app:layout_constraintStart_toStartOf="@id/broadcast_camera"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute_text" />

            <ImageView
                android:id="@+id/broadcast_flip"
                android:layout_width="@dimen/broadcast_controls_button_diameter"
                android:layout_height="@dimen/broadcast_controls_button_diameter"
                android:background="@drawable/bg_broadcast_circle_button"
                android:contentDescription="@string/description_flip_button"
                android:elevation="5dp"
                android:padding="@dimen/broadcast_padding_small"
                android:src="@drawable/ic_flip"
                app:layout_constraintEnd_toStartOf="@id/broadcast_go_live"
                app:layout_constraintStart_toEndOf="@id/broadcast_camera"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute"
                app:tint="@color/broadcast_white_color" />

            <TextView
                android:id="@+id/broadcast_flip_text"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flip"
                app:layout_constraintBottom_toBottomOf="@id/broadcast_mute_text"
                app:layout_constraintEnd_toEndOf="@id/broadcast_flip"
                app:layout_constraintStart_toStartOf="@id/broadcast_flip"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute_text" />

            <ImageView
                android:id="@+id/broadcast_go_live"
                android:layout_width="@dimen/broadcast_controls_button_diameter"
                android:layout_height="@dimen/broadcast_controls_button_diameter"
                android:background="@{isStreamOnline ?  @drawable/bg_end_stream : @drawable/bg_go_live}"
                android:contentDescription="@string/description_go_live_button"
                android:elevation="5dp"
                android:padding="@dimen/broadcast_padding_small"
                app:layout_constraintEnd_toEndOf="@id/invite_to_watch"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute"
                app:tint="@color/broadcast_white_color"
                tools:background="@drawable/bg_go_live" />

            <TextView
                android:id="@+id/broadcast_go_live_text"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/broadcast_margin_tiny"
                android:text="@{isStreamOnline ? @string/end_stream : @string/go_live}"
                app:layout_constraintBottom_toBottomOf="@id/broadcast_mute_text"
                app:layout_constraintEnd_toEndOf="@id/broadcast_go_live"
                app:layout_constraintStart_toStartOf="@id/broadcast_go_live"
                app:layout_constraintTop_toTopOf="@id/broadcast_mute_text" />

            <TextView
                android:id="@+id/share_screen"
                style="@style/TextStyleSecondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/broadcast_button_height"
                android:layout_marginStart="@dimen/broadcast_margin_big"
                android:layout_marginTop="@dimen/broadcast_margin_big"
                android:layout_marginEnd="@dimen/broadcast_margin_small"
                android:background="@drawable/bg_broadcast_rectangle_button"
                android:elevation="5dp"
                android:visibility="@{isScreenCaptureOn ? View.INVISIBLE : View.VISIBLE}"
                android:gravity="center"
                android:text="@string/share_screen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/invite_to_watch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/broadcast_mute_text" />

            <TextView
                android:id="@+id/stop_screen_share_menu_button"
                style="@style/TextStyleSecondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/broadcast_button_height"
                android:layout_marginStart="@dimen/broadcast_margin_big"
                android:layout_marginTop="@dimen/broadcast_margin_big"
                android:layout_marginEnd="@dimen/broadcast_margin_small"
                android:background="@drawable/bg_broadcast_rectangle_red_button"
                android:elevation="5dp"
                android:visibility="@{isScreenCaptureOn ? View.VISIBLE : View.GONE}"
                android:gravity="center"
                android:text="@string/stop_sharing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/invite_to_watch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/broadcast_mute_text" />

            <TextView
                android:id="@+id/invite_to_watch"
                style="@style/TextStyleSecondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/broadcast_button_height"
                android:layout_marginStart="@dimen/broadcast_margin_small"
                android:layout_marginEnd="@dimen/broadcast_margin_big"
                android:background="@drawable/bg_broadcast_rectangle_button"
                android:elevation="5dp"
                android:gravity="center"
                android:text="@string/invite_to_watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/share_screen"
                app:layout_constraintTop_toTopOf="@id/share_screen" />

            <FrameLayout
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/broadcast_margin_big"
                android:visibility="gone"
                android:background="@color/broadcast_divider_color"
                app:layout_constraintBottom_toTopOf="@id/timed_metadata"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share_screen" />

            <TextView
                android:id="@+id/timed_metadata"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/broadcast_margin_normal"
                android:layout_marginBottom="@dimen/broadcast_margin_medium"
                android:text="@string/timed_metadata"
                android:visibility="gone"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/sample_event"
                app:layout_constraintStart_toStartOf="@id/share_screen"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <TextView
                android:id="@+id/sample_event"
                style="@style/TextStyleSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/broadcast_margin_tiny"
                android:text="@string/sample_event"
                app:layout_constraintBottom_toTopOf="@id/sample_event_value"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/share_screen"
                app:layout_constraintTop_toBottomOf="@id/timed_metadata" />

            <TextView
                android:id="@+id/sample_event_value"
                style="@style/TextStyleTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/jetbrains_mono"
                android:text="@string/sample_event_data"
                android:textColor="@color/broadcast_json_code_color"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/share_screen"
                app:layout_constraintTop_toBottomOf="@id/sample_event" />

            <TextView
                android:id="@+id/send_metadata"
                style="@style/TextStyleSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_sheet_send_button"
                android:gravity="center"
                android:minWidth="56dp"
                android:paddingStart="@dimen/broadcast_padding_small"
                android:paddingTop="@dimen/broadcast_padding_tiny"
                android:paddingEnd="@dimen/broadcast_padding_small"
                android:paddingBottom="@dimen/broadcast_padding_tiny"
                android:text="@string/send"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/sample_event_value"
                app:layout_constraintEnd_toEndOf="@id/invite_to_watch"
                app:layout_constraintTop_toTopOf="@id/sample_event" />

            <ProgressBar
                android:id="@+id/metadata_progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dip"
                android:indeterminate="true"
                android:indeterminateTint="@color/broadcast_primary_accent_color"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/sample_event_value"
                app:layout_constraintEnd_toEndOf="@id/invite_to_watch"
                app:layout_constraintTop_toTopOf="@id/sample_event" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
